# workplate

./: .gitignore  CLAUDE.md  cucumber.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_tasks.sql
src-tauri/src/: db.rs  lib.rs  main.rs  oauth.rs
src/acceptance/: backlog.acceptance.test.tsx  my-day.acceptance.test.tsx  my-plate.acceptance.test.tsx  settings-sidebar.acceptance.test.tsx  settings.acceptance.test.tsx
src/components/calendar/: CalendarConnect.test.tsx  CalendarConnect.tsx  DayTimeline.test.tsx  DayTimeline.tsx
src/components/layout/: Shell.tsx  Sidebar.test.tsx  Sidebar.tsx
src/components/task/: SortableTaskList.tsx  TaskCard.test.tsx  TaskCard.tsx  TaskFilters.tsx  TaskForm.test.tsx  TaskForm.tsx  TaskList.test.tsx  TaskList.tsx
src/hooks/: use-calendar.ts  use-tasks.ts
src/services/: calendar-context.tsx  calendar-service.mock.test.ts  calendar-service.mock.ts  calendar-service.ts  repository-context.tsx  task-repository.mock.test.ts  task-repository.mock.ts  task-repository.ts
src/store/: app-store.ts
src/types/: calendar.ts  task.ts
src/views/: Backlog.test.tsx  Backlog.tsx  MyDay.test.tsx  MyDay.tsx  MyPlate.test.tsx  MyPlate.tsx  Settings.test.tsx  Settings.tsx
tests/features/: backlog.feature  my-plate.feature
tests/steps/: task-steps.tsx
tests/support/: hooks.ts  world.ts
